--- a/Assets/MainUI.uxml
+++ b/Assets/MainUI.uxml
@@ -2,4 +2,6 @@
     <Style src="project://database/Assets/mainStyleSheet.uss?fileID=7433441132597879392&amp;guid=280896ca0f828a24c8f1cd3494d4a2c0&amp;type=3#mainStyleSheet" />
     <ui:Button text="Turn" triple-click-selects-line="true" name="turnSkipButton" style="justify-content: flex-start; align-self: flex-end; -unity-text-align: middle-center; transform-origin: center; align-items: auto; align-content: auto; position: relative; top: 95%; bottom: auto;" />
     <ui:Button text="Turn Reset" name="turnResetButton" style="width: 163px; justify-content: flex-start; align-items: auto; align-self: center; top: 80%;" />
+    <ui:Button text="Look Left" name="lookLeftButton" style="width: 320px; justify-content: space-evenly; align-items: auto; align-self: auto; align-content: auto; transform-origin: center; translate: 0 0; top: 50%;" />
+    <ui:Button text="Look Right" name="lookRightButton" style="width: 320px; justify-content: space-evenly; align-items: auto; align-self: flex-end; align-content: auto; transform-origin: center; translate: 0 0; top: 50%;" />
 </ui:UXML>
